plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14' apply false
    id 'io.spring.dependency-management' version '1.1.7'
}

allprojects {
    group = 'com.kthowns'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

// 모든 서브 프로젝트 공통 설정
subprojects {
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.5.14"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // OpenAPI Docs
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

        // Test
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}

// 실행 모듈 설정
project(':app-api') {
    apply plugin: 'org.springframework.boot'
}
